--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,6 +27,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'German poetry -- 18th century'
 - !lcc 'PT'
+- GITenberg
 tableOfContents: "Alexander\r\nAn Amor\r\nAn den Anakreon\r\nAn den Horaz\r\nAn den\
   \ Wein\r\nAn die J. L***\r\nAn die Kunstrichter\r\nAn die Leier\r\nAn die Schwalbe\r\
   \nAn eine kleine Schöne\r\nAntwort eines trunknen Dichters\r\nAuf sich selbst\r\n\
